# ChangeLog for dev-java/jflex
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jflex/ChangeLog,v 1.20 2015/02/23 10:37:47 monsieurp Exp $

*jflex-1.4.3-r1 (23 Feb 2015)

  23 Feb 2015; Patrice Clement <monsieurp@gentoo.org> +jflex-1.4.3-r1.ebuild,
  jflex-1.4.3.ebuild:
  Revert previous change (EAPI + SLOT) and revbump the package instead.

  22 Feb 2015; Patrice Clement <monsieurp@gentoo.org> jflex-1.4.3.ebuild,
  jflex-1.5.0.ebuild, jflex-1.5.1.ebuild, jflex-1.6.0.ebuild:
  Fix package collisions and bug #504774.

  31 Jan 2015; Patrice Clement <monsieurp@gentoo.org>
  files/jflex-1.5.0-build.xml, jflex-1.5.0.ebuild:
  Patch to fix jflex-1.5.0 (bug 505498) courtesy of Martin Walch
  <walch.martin@web.de>.

  31 Jan 2015; Patrice Clement <monsieurp@gentoo.org> jflex-1.5.1.ebuild:
  Patch to fix jflex-1.5.1 (bug 505498) courtesy of Martin Walch
  <walch.martin@web.de>.

*jflex-1.6.0 (18 Jan 2015)

  18 Jan 2015; Patrice Clement <monsieurp@gentoo.org> +jflex-1.6.0.ebuild:
  Version bump to 1.6 courtesy of Martin Walch. Fix bug 532006.

  30 Apr 2014; Tom Wijsman <TomWij@gentoo.org> jflex-1.5.1.ebuild:
  Fix up dodoc line; reported in bug #498874 by James Cloos, patch provided by
  Martin Walch.

*jflex-1.5.1 (17 Apr 2014)

  17 Apr 2014; Tom Wijsman <TomWij@gentoo.org> +jflex-1.5.1.ebuild:
  Version bump to 1.5.1; fixes bug #507944, filed by Mr. Anderson
  (walch.martin).

*jflex-1.5.0 (08 Mar 2014)

  08 Mar 2014; Tom Wijsman <TomWij@gentoo.org> +files/jflex-1.5.0-build.xml,
  +jflex-1.5.0.ebuild, -jflex-1.4.1-r1.ebuild:
  Version bump to 1.5.0, EAPI 5, partially fixes bug #498874 reported by Mr.
  Anderson; remove old.

  20 Oct 2013; Agostino Sarubbo <ago@gentoo.org> jflex-1.4.3.ebuild:
  Stable for ppc64, wrt bug #476958

  20 Oct 2013; Agostino Sarubbo <ago@gentoo.org> jflex-1.4.3.ebuild:
  Stable for ppc, wrt bug #476958

  01 Sep 2013; Fabian Groffen <grobian@gentoo.org> jflex-1.4.3.ebuild: