@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jflex/jflex-1.4.3.ebuild,v 1.10 2015/02/23 10:37:47 monsieurp Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jflex/jflex-1.4.3-r2.ebuild,v 1.1 2015/02/26 16:07:12 fordfrog Exp $
 
 # Currently, this package uses an included JFlex.jar file to bootstrap.
 # Upstream was contacted and this bootstrap is really needed. The only way to avoid it would be to use a supplied pre-compiled .scanner file.
@@ -57,7 +57,7 @@ src_compile() {
 
 src_install() {
 	java-pkg_dojar lib/JFlex.jar
-	java-pkg_dolauncher "${P}" --main JFlex.Main
+	java-pkg_dolauncher "${PN}" --main JFlex.Main
 	java-pkg_register-ant-task
 
 	dodoc doc/manual.pdf doc/manual.ps.gz src/changelog
