@@ -10,4 +10,4 @@ RDEPEND=>=virtual/jre-1.4 vim-syntax? ( || ( app-editors/vim app-editors/gvim ) 
 SLOT=0
 SRC_URI=mirror://sourceforge/jflex/jflex-1.4.3.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=be65568d470d7ce55e152b278cce2ede
+_md5_=bc9b454378fa6af7998b5b6d1d378c4c
