@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install unpack
+DEPEND=x11-libs/libXft x11-libs/libXinerama x11-libs/libXrandr virtual/pkgconfig sys-devel/bison
+DESCRIPTION=OpenBSD fork of calmwm, a clean and lightweight window manager
+EAPI=5
+HOMEPAGE=http://www.openbsd.org/cgi-bin/cvsweb/xenocara/app/cwm/ http://github.com/chneukirchen/cwm
+IUSE=vanilla
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=ISC
+RDEPEND=x11-libs/libXft x11-libs/libXinerama x11-libs/libXrandr
+SLOT=0
+SRC_URI=vanilla? ( http://chneukirchen.org/releases/cwm-5.6.tar.gz -> cwm-5.6-chneukirchen.tar.gz ) !vanilla? ( https://github.com/xmw/cwm/tarball/ea9a436 -> cwm-5.6-xmw.tar.gz )
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=8c6b775900508d1974b6507f500e9229
