@@ -7,18 +7,19 @@ DIST cwm-5.1_p20130728-chneukirchen.tar.gz 49518 SHA256 40f2d099947368946d5cb8f5
 DIST cwm-5.1_p20130728-xmw.tar.gz 50890 SHA256 1a9369995e9d3cd9b86360dcbb6f33b00e80617b8e9c88739462b6e80f5aa84a SHA512 9d7fac1ec8c47db2e6fd0b2ceb6649b257c9291e53b4906616e2deeaea98129aa1398fc7bc28a6bfe47d98584423ffef42a26ad8ec7f4d64587f5a04ee65f1a3 WHIRLPOOL 250ad503e502bf8329267cd92e94242642e682808de1c3e03c8f169abb88082f2b8cd79a87c477b2670084443ac3b4851ab1c4967c01775b3f9adcbdcee85a3c
 DIST cwm-5.5-chneukirchen.tar.gz 50709 SHA256 99aa337f15b07e36ba3b03593c56f65b76f8bbef6f73daca73846f6b002f2187 SHA512 97eea54f785f0230b41454f0f9cafa23297410911d8de42bced685cb2751fe180d4a85e57ed77ba4d2ba1e579c6bdf827a8f0f17665f97d34e579600a9abbf54 WHIRLPOOL 07cb50b87a22604f052a8cee75cecb1ff29c18659fab5ed144a6300817b98e6ef039ff8729fc79290a60d8a69103fe93d4a57c5c9c2c5e5996336d1aa78e1b02
 DIST cwm-5.5-xmw.tar.gz 53515 SHA256 81544b907ada85f2dbc7dddf7f55e7549b2047d857726c3f6a75e0e160453695 SHA512 7496e43d7a12aa3aeba2321fc447a1caf2eb9c796c697c13eceb3180b30d3afec8af770a0c31d26d5a89dc723d5bb7eb465523836bab09754c3dc7554623dbdf WHIRLPOOL 663c50c927c2fc63cc53d0beacffd5678d921fb1e6b432ffad988a3552ce1027b6f24a28e2cfb7c2b16c7e880ed61495a816cec480726f00db1f9b267278db94
+DIST cwm-5.6-chneukirchen.tar.gz 50799 SHA256 006320bb1716cc0f93bac5634dcccd01f21d468263b5fc9d1be2dd11078a0625 SHA512 0bb5f9c69e1ed30ef38ced70008baa347032a0c31ee2d4a88e3b45092969a5427ef160577da4891aba3181067235b244f11fc796815f41448930b438099b5bfc WHIRLPOOL bc1a0d5319e287a21415022c288af8977ff135af0f75f8a0d2b15db837ffd4a0cb94e8e031add366b2ad7852b4b6fb0b514e69cc85d9b842b469e0e69e627645
+DIST cwm-5.6-xmw.tar.gz 53738 SHA256 64d6974b2c3076f69d07bb38058a7e7ddc8a0e0016b191fc9a3bef469f617934 SHA512 cf0174523838dba5997206be904ab667efc5ff7e413e98bb81cc3a69d40a79b54e21405787e088486feb8790d1094a2d3cce0be08d7ee36a2b9b0dadd78466c7 WHIRLPOOL 40b7c8aeb665fdc8393d69eb8dcec220d6ac9b53e4491894f69e31493d5ba136c37d43553b199662b57d603fe71420fd24bb9ddf9240ecc50e6f8d9d3e7f89ab
 EBUILD cwm-5.1.ebuild 866 SHA256 48d043cd4dedd988c4588059475d070e49a65cf2b0eba12c4f4fe6362cd6eea6 SHA512 b96e6c86c97cb0b772b56a19c6f2051966d534894e782d7d89fc67144174cc1f8bca3c185c11b73fc563a51196c364f3f9b4c87db884d429f0fd14dfba30e46e WHIRLPOOL 146a2ffd6ac1f953e4e57b8b1c9c5fc2c0db5a91e965ebd00d2944ff9419318f5607ad9063ff7aac5fb40ecfd2758913a664539446a05f0d0832fa942ccec2ef
 EBUILD cwm-5.1_p20130728.ebuild 1093 SHA256 dc48c12ad53fbb3762c7714b9d53c50d3d5a927261babfcb9ee78a5f693cc9c1 SHA512 71433bc3395b8b641ffe24dcbae7d211ed67e12ef908e96a6772cca597f9eae8a606c8771d496d1a9913e6e74b72cf886950658464b205d466241f7bd49cd968 WHIRLPOOL 556fbf5392536278a036f4cb2843a28aa904dca697eecfc94a2ddcdc6629c99ecb71fc77df7192a79250255000e5495c4d493c9c9589342128cf34394e755558
 EBUILD cwm-5.5.ebuild 1105 SHA256 ee3dc2dddf239f9306672d27dec3fa353315b845912e3442859659334efd22c5 SHA512 c2943cbf76b5d5d94b265115840e228d7bff526c470ced2946ad46706e917a6b5d00d423431ee1d76f86aa9ef805dfda4ca8f92516d8cfdbeac248b32911c079 WHIRLPOOL 755b3a43066120e370e8b4c64554c826291f10bb313d8452c27465383a3ea72b85f30bd9863ee79990a3928af322ce9e63c76ca8e80d76eebe84c76046b7d2a6
+EBUILD cwm-5.6.ebuild 1105 SHA256 7e69ad2a5a40d4c11f3c7ed1af18dd1a0a745754b49ce5750022ca7f1266f32d SHA512 821604aa23de9ed1e0f4c5296346c6a0c7651de95d76cdac7626798343575f8ecfda664d09ce7ba5f2b33f9ce7e0958280164e8c394138fbcb267860b8612b0d WHIRLPOOL c256f39beeed02f79be47bf09353fac362fb66e89c37bb19281b6ed42a049d9a7bad75521cbb669d1dc56c51ac658b708acf425d2d4e54935038c4c376c2172e
 EBUILD cwm-9999.ebuild 968 SHA256 b8e8a1c3cfb6c61e136077e8588652af83d46acb49c7e70bf894dd1352614bb2 SHA512 a0768ea8e8bbb5b5cb209529cb3b92f76aa70716e5cac07a4c866faee40282ee07213ed4c62cde026008f2038cc528cf9c1f7ff3d1fce3e69a17c508605eae50 WHIRLPOOL e032936e4bec27b2db2c170e1a674384bd0de7ad5c987aa75b944b7487ae58670c3eb4b1fa9cd21e8451a2d4a8cefbbe76c36227d1c7877d0f30aead4fe343d3
-MISC ChangeLog 6757 SHA256 e0adc3d36d7605ef378c54f326881d0daefe429d3c2f2777ac445407c4071af4 SHA512 d44f41089de2415708b765c881d61f060991794e93a3eb339e8271b25268d689d062807c4372198638d3ced7bfa59eba3cc991eee9e4cf6d55939a5152f19223 WHIRLPOOL 1110942c53ca52ea666048cf09a81ae817c56421240155b7bc1da9807d55c7d355b8c0fdb426f3f382a37986af11ab1f50dbbf92737963fd6d8cb774dc9064e6
+MISC ChangeLog 6874 SHA256 80a91c7ce15fb6377316eef89790c8a939cc701fecf4ae67a1a953e98b0cfeda SHA512 89f661d2e33dfd8abc8220fcaf5e966d8cd8a963c33378d4832dab35f562fb4b04f28a2c155f5a3744018fad2b2e8bd2f84aa23ae5d3f39ee880a34fdbe84197 WHIRLPOOL e941dd406621c79094815155e01d0b84317112deee1c9bd5924cf62f487f4398730100ff5b13a4b415bc7a2b6aec9525aa0a5cb0379cfbd61a99ac599382bec0
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iL4EAREIAGYFAlS5sx1fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDY3QjA4MzdGODg1NUMxMjIzNUQ0MDgxNzky
-N0FERDBDNjJFRUYwOTAACgkQknrdDGLu8JC6HgD/YXL/MlYkDLIkvBRg1lOlwN0o
-wrERIah+ffbYjvkt/ekBAIMCWdbGoq7cMvm5W9ocTn7VgHcpZGuVo1dvI7rwt7WP
-=cQgw
+iF4EAREIAAYFAlTvRZYACgkQknrdDGLu8JAJlAD6AtYEEM888xTpol70QzmFb6u1
+kr7y64/4Hp0nUjbZ/fYBAJIatCXVIcz+tbLcrV+/Z2LJfQTvsgIk5PNvPsQVOO6M
+=qDYu
 -----END PGP SIGNATURE-----
